# rust2xml

./: .gitignore  Cargo.toml  README.md  main.xml
src/: main.rs  xml.rs
